# ballmer-peak

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
ballmer_peak/: __init__.py  cli.py  impairment.py  report.py  runner.py  scoring.py
evals/retry-client/: grader.py  task.json
evals/retry-client/repo/: retry_client.py
examples/: reference_agent.py
tests/: test_impairment.py  test_runner.py  test_scoring.py
