[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ballmer-peak"
version = "0.1.0"
description = "A scientifically questionable eval for coding agents under degraded operator prompts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ian Philpot" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
ballmer = "ballmer_peak.cli:main"

[tool.setuptools.packages.find]
include = ["ballmer_peak*"]
